[project]
name = "hitl"
version = "0.1.0"
description = "hitl using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
hitl = "hitl.main:run"
run_crew = "hitl.main:run"
train = "hitl.main:train"
replay = "hitl.main:replay"
test = "hitl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
